tests/ui/borrow-as-mut.stderr
error[E0596]: cannot borrow value as mutable, as it is not declared as mutable
 --> tests/ui/borrow-as-mut.rs:9:5
  |
9 |     a.clear(); //~ ERROR E0596
  |     ^ cannot borrow as mutable
  |
help: consider changing this to be mutable
  |
8 | async fn borrow_mut(mut a: Vec<u8>) {
  |                     +++
